--- a/www/css/playlist.css
+++ b/www/css/playlist.css
@@ -246,3 +246,19 @@
 	font-family:Raleway;
     color: #ffffff;
 }
+
+.newtext{
+    color:rgb(60,60,60);
+    font-size:16px;
+    margin:18px;
+    margin-top:20px;
+    line-height: 1.4em;
+}
+.newitem{
+    overflow:visible;
+    color:rgb(60,60,60);
+    font-size:16px;
+    margin-left:18px;
+    margin-right:18px;
+    margin-bottom:18px;
+}
