Added in comments to describe which function to use

--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -14,6 +14,9 @@
 -->
         <div  class="ride" >
             <a  href="#" ng-click="getPicture()">
+<!--                Use the above for deving in the simulator -->
+<!--            <a  href="#" ng-click="takePicture()">-->
+<!--                Use the above for production -->
               <div  class="cover" style="background-image:url('img/Golden.JPG'); ">
                   <!--use contian for background cover -->
               </div>
