--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quill">
+<ion-view view-title="Quill Notecards">
 <!--
 <ion-nav-buttons  side="right">
 		<a ng-click="addRide()"><i style="font-size:30px; color:white; margin-right: 6px;" class="ion-plus"></i></a>
@@ -24,7 +24,7 @@
               <div class="row">
                   
                    <div style="margin-left:32%;" class="text col col-60">
-                  <img src="img/devPhoto.png" style="width:50%;">
+                  <img src="img/devPhoto2.png" style="width:50%;">
                 </div>
               </div>
             </a>
