--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -23,16 +23,17 @@
           Login
         </ion-item>
 -->
-        <ion-item menu-close href="#/app/search">
-          Artists Statement
-        </ion-item>
+        
 <!--
         <ion-item menu-close href="#/app/browse">
           Account
         </ion-item>
 -->
         <ion-item menu-close href="#/app/playlists">
-          People
+          Notecards
+        </ion-item>
+          <ion-item menu-close href="#/app/search">
+           Account
         </ion-item>
       </ion-list>
     </ion-content>
