--- a/platforms/ios/www/templates/playlists.html
+++ b/platforms/ios/www/templates/playlists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quill">
+<ion-view view-title="Quill Notecards">
 <!--
 <ion-nav-buttons  side="right">
 		<a ng-click="addRide()"><i style="font-size:30px; color:white; margin-right: 6px;" class="ion-plus"></i></a>
@@ -13,15 +13,18 @@
   </ion-refresher>
 -->
         <div  class="ride" >
-            <a  href="#" ng-click="getPicture()">
-              <div  class="cover" style="background-image:url('img/Golden.JPG'); ">
+            <a  href="#" ng-click="takePicture()">
+<!--                Use the above for deving in the simulator -->
+<!--            <a  href="#" ng-click="takePicture()">-->
+<!--                Use the above for production -->
+              <div  class="cover" style="background-image:url('img/Goldenpng.png'); ">
                   <!--use contian for background cover -->
               </div>
 
               <div class="row">
                   
                    <div style="margin-left:32%;" class="text col col-60">
-                  <img src="img/devPhoto.png" style="width:50%;">
+                  <img src="img/devPhoto2.png" style="width:50%;">
                 </div>
               </div>
             </a>
@@ -54,5 +57,6 @@
             </a>
             
         </div>
+     
   </ion-content>
 </ion-view>
