--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -43,7 +43,7 @@
             <hr>
           <p class="newtext">
                 
-            Go to <u>http://quillapp.io/943462</u> to see a more in-depth analysis of {{playlists[lastChar-1].time}}.
+            See a more thorough analysis at <u>http://quillapp.io/943462</u>.
             </p>
 
 
