--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -13,18 +13,18 @@
   </ion-refresher>
 -->
         <div  class="ride" >
-            <a  href="#" ng-click="getPicture()">
+            <a  href="#" ng-click="takePicture()">
 <!--                Use the above for deving in the simulator -->
 <!--            <a  href="#" ng-click="takePicture()">-->
 <!--                Use the above for production -->
-              <div  class="cover" style="background-image:url('img/Golden.JPG'); ">
+              <div  class="cover" style="background-image:url('img/harvard.jpg'); ">
                   <!--use contian for background cover -->
               </div>
 
               <div class="row">
                   
-                   <div style="margin-left:32%;" class="text col col-60">
-                  <img src="img/devPhoto2.png" style="width:50%;">
+                   <div style="margin-left:30%; padding:30px; border:2px dashed rgb(220,220,220); border-radius:80px;" class="text col col-40">
+                  <img src="img/devPhoto2.png" style="width:100%;">
                 </div>
               </div>
             </a>
@@ -57,5 +57,6 @@
             </a>
             
         </div>
+     
   </ion-content>
 </ion-view>
