--- a/platforms/ios/www/templates/playlist.html
+++ b/platforms/ios/www/templates/playlist.html
@@ -33,17 +33,17 @@
             <p class="newtext">
                 <b><u>Key Facts</u></b>
                 <ul class="list" style="margin-top:0px;">
-                    
+
               <li class="newitem" ng-repeat="i in playlists[lastChar-1].race">
-                • {{i}} 
+                • {{i}}
               </li>
           </ul>
-            
+
             </p>
             <hr>
           <p class="newtext">
-                
-            Go to <u>http://quillapp.io/943462</u> to see a more in-depth analysis of {{playlists[lastChar-1].time}}.
+
+            See a more thorough analysis at <u ng-click="openLink(lastChar-1)">http://quillapp.io/943462</u>.
             </p>
 
 
@@ -65,5 +65,5 @@
         <ion-spinner icon="lines" class="loading-spinner" ng-show="loading"></ion-spinner>
 
   </ion-content>
- 
+
 </ion-view>
